crates/tests/fixtures/harness/data/error/winrt_interface_method_param_non_winrt_type/input.rdl

#[winrt]
mod Test {
    interface IFoo {
        fn DoThing(&self, value: Win32Type) -> i32;
    }
}
#[win32]
mod Test {
    struct Win32Type { x: i32, }
}
